# slime-engine

./: .gitignore  Cargo.toml  README.md  build.rs
assets/objects/: crazycorn.mtl
assets/shaders/: light.wgsl  shader.wgsl  shader2d.wgsl  shadow.wgsl
examples/: epic.rs  example_canvas.rs  example_scene.rs  headless_benchmark.rs  test.rs
old/examples/: headless_benchmark.rs  test.rs
old/src/: lib.rs  object_import.rs  window.rs
src/: camera.rs  core.rs  input.rs  lib.rs  lib.rs.old  model.rs  node.rs  object_import.rs  primitives.rs  render.rs  resources.rs  scene.rs  texture.rs  transform.rs  window.rs
